[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/enemies/enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://weapons/weapon.gd" type="Script" id=2]
[ext_resource path="res://weapons/weapon_information_enemies.gd" type="Script" id=3]
[ext_resource path="res://actors/player/body_movement/body_state_machine/body_state_machine.gd" type="Script" id=4]
[ext_resource path="res://actors/player/body_movement/states/motion/on_space/idle.gd" type="Script" id=5]
[ext_resource path="res://actors/player/body_movement/states/motion/on_space/move.gd" type="Script" id=6]
[ext_resource path="res://actors/enemies/enemy/eyes/eyes.gd" type="Script" id=7]

[node name="Enemy" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 4
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Body" type="Sprite" parent="." index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="Weapon" type="Position2D" parent="." index="3"]

script = ExtResource( 2 )
current_weapon = null

[node name="WeaponInformation" type="Node" parent="Weapon" index="0"]

script = ExtResource( 3 )

[node name="ShootCoolDown" type="Timer" parent="Weapon" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="ReloadCoolDown" type="Timer" parent="Weapon" index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Visibility" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility" index="0"]

[node name="BodyMovement" type="Node" parent="." index="5"]

script = ExtResource( 4 )
initial_state = NodePath("Move")

[node name="Idle" type="Node" parent="BodyMovement" index="0"]

script = ExtResource( 5 )

[node name="Move" type="Node" parent="BodyMovement" index="1"]

script = ExtResource( 6 )
move_force = 0.0
is_player = false

[node name="Eyes" type="Node2D" parent="." index="6"]

script = ExtResource( 7 )
detect_radius = 100

[node name="Health" type="Node" parent="." index="7"]

[node name="DamageZone" type="Area2D" parent="." index="8"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone" index="0"]

[node name="DecisionTree" type="Node" parent="." index="9"]

editor/display_folded = true

[node name="RootDecision" type="Node" parent="DecisionTree" index="0"]

[node name="Decisions" type="Node" parent="DecisionTree" index="1"]

[node name="Actions" type="Node" parent="DecisionTree" index="2"]


